<resources>
    <string name="app_name">Crypto app Kotlin</string>
    <string name="logo">Logo</string>
    <string name="symbols_template">%1$s / %2$s</string>
    <string name="last_update">Last update: %s</string>
    <string name="price">Price:</string>
    <string name="min_today">Min today:</string>
    <string name="max_today">Max today:</string>
    <string name="last_trade">Last trade:</string>
    <string name="updated">Updated:</string>
    <string name="slash"> / </string>
</resources>